# midlman

./: Cargo.toml  README.md
data/: subzero.yaml
src/: component.rs  controller.rs  main.rs  midi.rs
src/midi/: components.rs  controller.rs  mod.rs  preset.rs
src/midi/components/: button.rs  dial.rs  slider.rs
src/volume/: mod.rs  session.rs  winaudio.rs
