[package]
name = "midlman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.9.1"
midly = "0.5.3"
windows = "0.52.0"

[profile.release]
lto = true
opt-level = "z"
strip = true

[[bin]]
name = "midlman"
path = "src/main.rs"
