[package]
name = "midlman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.9.1"
midly = "0.5.3"
windows = { version = "0.52.0", features = [
    "implement",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Foundation",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus"
] }

[profile.release]
lto = true
opt-level = "z"
strip = true

[[bin]]
name = "midlman"
path = "src/main.rs"
